--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -7,52 +7,113 @@
     tools:context=".restaurant">
 
     <LinearLayout
-        android:layout_width="402dp"
-        android:layout_height="256dp"
+        android:layout_width="473dp"
+        android:layout_height="816dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="9dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Crear restaurante" />
+            android:layout_height="41dp"
+            android:text="Crear restaurante"
+            android:textSize="18sp" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName3"
+            android:id="@+id/txt_rr_nombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Nombre" />
+            android:hint="Nombre"
+            android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName4"
+            android:id="@+id/txt_rr_nit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Nit" />
+            android:hint="Nit"
+            android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/txt_rr_propietario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Propietario" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName5"
+            android:id="@+id/txt_rr_direccion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Direccion" />
+            android:hint="Direccion"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/txt_rr_telefono"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Telefono"
+            android:inputType="textPersonName" />
+
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map_rr_ubicacion"
+            android:layout_width="match_parent"
+            android:layout_height="234dp" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="222dp">
+
+            <ImageView
+                android:id="@+id/img_rr_logo"
+                android:layout_width="207dp"
+                android:layout_height="179dp"
+                android:layout_weight="1"
+                app:layout_constraintEnd_toStartOf="@+id/img_rr_fotolugar"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:layout_editor_absoluteY="33dp"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <ImageView
+                android:id="@+id/img_rr_fotolugar"
+                android:layout_width="222dp"
+                android:layout_height="175dp"
+                android:layout_weight="1"
+                tools:layout_editor_absoluteX="235dp"
+                tools:layout_editor_absoluteY="37dp"
+                tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="120dp"
+                android:layout_height="24dp"
+                android:text="    logo click aqui"
+                app:layout_constraintEnd_toEndOf="@+id/img_rr_logo"
+                app:layout_constraintStart_toStartOf="@+id/img_rr_logo"
+                tools:layout_editor_absoluteY="164dp" />
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="139dp"
+                android:layout_height="23dp"
+                android:text="  foto lugar click aqui"
+                app:layout_constraintEnd_toEndOf="@+id/img_rr_fotolugar"
+                app:layout_constraintHorizontal_bias="0.52"
+                app:layout_constraintStart_toStartOf="@+id/img_rr_fotolugar"
+                tools:layout_editor_absoluteY="165dp" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btn_rr_crear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Crear" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
