--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,8 +38,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
         android:text="iniciar sesion"
-        app:layout_constraintTop_toBottomOf="@+id/login_password"
-        tools:layout_editor_absoluteX="143dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_password" />
 
     <Button
         android:id="@+id/btn_register"
