--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,10 @@
         android:layout_width="324dp"
         android:layout_height="114dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="235dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/btnAdmin"
