--- a/app/src/main/res/layout/restaurant_inicio.xml
+++ b/app/src/main/res/layout/restaurant_inicio.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="180dp"
-    android:layout_height="170dp">
+    android:layout_width="200dp"
+    android:layout_height="200dp">
 
     <ImageView
         android:id="@+id/img_ri_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="138dp"
+        android:layout_height="144dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -18,7 +18,7 @@
 
     <TextView
         android:id="@+id/txt_ri_nombre"
-        android:layout_width="87dp"
+        android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:text="TextView"
         android:textAllCaps="false"
@@ -28,22 +28,25 @@
         app:layout_constraintTop_toBottomOf="@+id/img_ri_icon" />
 
     <ImageButton
-        android:id="@+id/btn_ri_delete"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="#00FFFFFF"
+        android:id="@+id/btn_ri_edit"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:background="@android:drawable/ic_menu_edit"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_delete" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_ri_delete" />
 
     <ImageButton
-        android:id="@+id/btn_ri_edit"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="8dp"
-        android:background="#00FFFFFF"
+        android:id="@+id/btn_ri_delete"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:background="@android:drawable/ic_delete"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_ri_delete"
-        app:srcCompat="@android:drawable/ic_menu_edit" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
