--- a/app/src/main/res/layout/activity_realizar_pedido.xml
+++ b/app/src/main/res/layout/activity_realizar_pedido.xml
@@ -39,6 +39,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="1dp"
                 android:layout_marginRight="1dp"
+                android:numColumns="1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
