--- a/app/src/main/res/layout/pedido_item.xml
+++ b/app/src/main/res/layout/pedido_item.xml
@@ -52,11 +52,13 @@
         android:layout_marginBottom="10dp"
         android:ems="10"
         android:inputType="number"
+        android:textSize="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.392"
+        app:layout_constraintHorizontal_bias="0.28"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_pi_precio" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_pi_precio"
+        app:layout_constraintVertical_bias="0.833" />
 
     <TextView
         android:id="@+id/txt_pi_dtotal"
