--- a/app/src/main/res/layout/activity_menus.xml
+++ b/app/src/main/res/layout/activity_menus.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/im4d"
     tools:context=".Menus">
 
     <LinearLayout
@@ -56,6 +57,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginRight="12dp"
+                android:background="@drawable/ic_baseline_photo_camera_24"
                 app:layout_constraintBottom_toTopOf="@+id/btn_m_tomarfoto"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -73,6 +75,7 @@
                 android:ems="10"
                 android:hint="Nombre"
                 android:inputType="textPersonName"
+                android:textColor="#FFFFFF"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toStartOf="@+id/txt_m_precio"
                 app:layout_constraintStart_toStartOf="parent"
