--- a/app/src/main/res/layout/orden_pedido_item.xml
+++ b/app/src/main/res/layout/orden_pedido_item.xml
@@ -12,6 +12,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginLeft="25dp"
         android:text="123456789012345"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/txt_opi_hora"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/txt_opi_hora" />
@@ -23,6 +24,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:text="Pedido Hora:"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/txt_opi_hora"
         app:layout_constraintStart_toEndOf="@+id/txt_opi_codigo"
         app:layout_constraintTop_toTopOf="@+id/txt_opi_hora" />
@@ -34,6 +36,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
         android:text="15:00"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Precio"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/txt_opi_hora"
         app:layout_constraintEnd_toStartOf="@+id/txt_opi_estado"
         app:layout_constraintHorizontal_bias="0.524"
@@ -56,6 +60,7 @@
         android:layout_marginEnd="25dp"
         android:layout_marginRight="25dp"
         android:text="Estado"
+        android:textColor="#304FFE"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/txt_opi_hora"
         app:layout_constraintEnd_toEndOf="parent"
