--- a/app/src/main/res/layout/restaurant_inicio.xml
+++ b/app/src/main/res/layout/restaurant_inicio.xml
@@ -34,7 +34,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
-        android:background="@android:drawable/ic_menu_edit"
+        android:background="@drawable/ic_baseline_edit_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_ri_delete" />
 
@@ -45,7 +45,8 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
-        android:background="@android:drawable/ic_delete"
+        android:background="@drawable/ic_baseline_delete_24"
+        android:tint="#EABDBD"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
