--- a/app/src/main/res/layout/activity_administrador.xml
+++ b/app/src/main/res/layout/activity_administrador.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/im4d"
+    android:background="@drawable/fondo"
     tools:context=".administrador">
 
     <LinearLayout
@@ -30,6 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="43dp"
                 android:text="Lista de Restaurantes"
+                android:textColor="#128c7e"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -42,6 +43,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/ic_baseline_local_grocery_store_24"
+                android:tint="@color/color4"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -51,12 +53,14 @@
             android:id="@+id/btnRes"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rectanguloboton"
             android:text="Crear Restaurant" />
 
         <Button
             android:id="@+id/btn_adminOrd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rectanguloboton"
             android:text="Administrar Ordenes" />
 
     </LinearLayout>
