--- a/app/src/main/res/layout/activity_realizar_pedido.xml
+++ b/app/src/main/res/layout/activity_realizar_pedido.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo"
     tools:context=".RealizarPedido">
 
     <ScrollView
@@ -26,7 +27,9 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
                 android:text="Realizar Pedido"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="24dp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -52,7 +55,9 @@
                 android:layout_marginEnd="60dp"
                 android:layout_marginRight="60dp"
                 android:text="TextView"
+                android:textColor="@color/color4"
                 android:textSize="18dp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/gv_rp_lista" />
 
@@ -64,7 +69,9 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:text="Dirección"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="18dp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_rp_total" />
 
@@ -87,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
+                android:background="@drawable/rectanguloboton"
                 android:text="Pedir"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
