--- a/app/src/main/res/layout/restaurant_inicio.xml
+++ b/app/src/main/res/layout/restaurant_inicio.xml
@@ -22,6 +22,9 @@
         android:layout_height="25dp"
         android:text="TextView"
         android:textAllCaps="false"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="16dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
