--- a/app/src/main/res/drawable/rectangelblanco.xml
+++ b/app/src/main/res/drawable/rectangelblanco.xml
@@ -2,10 +2,7 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke android:width="1dp">
     </stroke>
-    <corners android:radius="100dp">
-    </corners>
-    <gradient android:startColor="@color/colorPrimary"
-        android:endColor="@color/colorPrimary">
+    <gradient android:startColor="@color/color4"
+        android:endColor="@color/color4">
     </gradient>
-
 </shape>
