--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/im4d"
+    android:background="@drawable/fondo"
     tools:context=".Login">
 
     <EditText
         android:id="@+id/login_email"
-        android:layout_width="250dp"
-        android:layout_height="45dp"
+        android:layout_width="326dp"
+        android:layout_height="50dp"
         android:layout_marginTop="136dp"
         android:background="@drawable/rectangulo"
         android:drawableStart="@drawable/ic_baseline_email_24"
+        android:drawableLeft="@drawable/ic_baseline_email_24"
         android:drawablePadding="16dp"
         android:ems="10"
         android:hint="Email"
@@ -22,13 +23,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:drawableLeft="@drawable/ic_baseline_email_24" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/login_password"
-        android:layout_width="250dp"
-        android:layout_height="45dp"
+        android:layout_width="326dp"
+        android:layout_height="50dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/rectangulo"
         android:drawableStart="@drawable/ic_baseline_lock_open_24"
@@ -66,5 +66,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_login"
         app:layout_constraintVertical_bias="0.069" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:text="Iniciar Sesion"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
