--- a/app/src/main/res/layout/activity_ordenes.xml
+++ b/app/src/main/res/layout/activity_ordenes.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo"
     tools:context=".Ordenes">
 
     <TextView
@@ -14,7 +15,8 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="Ordenes"
-        android:textSize="18dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +29,9 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="Detalle"
-        android:textSize="16dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ly_ao_listapedidos" />
 
@@ -52,7 +56,9 @@
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
         android:text="TextView"
+        android:textColor="@color/color4"
         android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gv_ao_listamenus" />
 
@@ -64,7 +70,9 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:text="Estado"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_ao_preciototal" />
 
@@ -87,28 +95,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Espera" />
+            android:text="Espera"
+            android:textColor="@color/color4"
+            android:textStyle="bold" />
 
         <RadioButton
             android:id="@+id/rb_ao_proceso"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Proceso" />
+            android:text="Proceso"
+            android:textColor="@color/color4"
+            android:textStyle="bold" />
 
         <RadioButton
             android:id="@+id/rb_ao_enviado"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Enviado" />
+            android:text="Enviado"
+            android:textColor="@color/color4"
+            android:textStyle="bold" />
     </RadioGroup>
 
     <Button
         android:id="@+id/btn_ao_guardarestado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="133dp"
+        android:layout_height="53dp"
         android:layout_marginTop="12dp"
+        android:background="@drawable/rectanguloboton"
         android:text="Guardar estado"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
