--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/ic_endless_constellation"
+    android:background="@drawable/fondo"
     tools:context=".restaurant">
 
     <ScrollView
@@ -25,46 +25,59 @@
                 android:layout_width="match_parent"
                 android:layout_height="51dp"
                 android:text="Crear restaurante"
-                android:textSize="18sp" />
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="24dp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/txt_rr_nombre"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:background="@drawable/rectangelblanco"
                 android:ems="10"
                 android:hint="Nombre"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:paddingLeft="15dp"
+                android:textColor="@color/colorPrimary" />
 
             <EditText
                 android:id="@+id/txt_rr_nit"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:background="@drawable/rectangelblanco"
                 android:ems="10"
                 android:hint="Nit"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:paddingLeft="15dp" />
 
             <EditText
                 android:id="@+id/txt_rr_propietario"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:background="@drawable/rectangelblanco"
                 android:ems="10"
-                android:hint="Propietario" />
+                android:hint="Propietario"
+                android:paddingLeft="15dp" />
 
             <EditText
                 android:id="@+id/txt_rr_direccion"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:background="@drawable/rectangelblanco"
                 android:ems="10"
                 android:hint="Direccion"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:paddingLeft="15dp" />
 
             <EditText
                 android:id="@+id/txt_rr_telefono"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:background="@drawable/rectangelblanco"
                 android:ems="10"
                 android:hint="Telefono"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:paddingLeft="15dp" />
 
             <com.google.android.gms.maps.MapView
                 android:id="@+id/map_rr_ubicacion"
@@ -73,61 +86,64 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="170dp">
+                android:layout_height="match_parent">
 
                 <ImageView
                     android:id="@+id/img_rr_logo"
                     android:layout_width="160dp"
                     android:layout_height="159dp"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginLeft="4dp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginLeft="32dp"
                     android:layout_weight="1"
+                    android:background="@drawable/ic_baseline_photo_camera_24"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@drawable/ic_launcher_foreground" />
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <ImageView
                     android:id="@+id/img_rr_fotolugar"
-                    android:layout_width="196dp"
-                    android:layout_height="155dp"
-                    android:layout_marginEnd="4dp"
-                    android:layout_marginRight="4dp"
+                    android:layout_width="160dp"
+                    android:layout_height="159dp"
                     android:layout_weight="1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/img_rr_logo"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@android:mipmap/sym_def_app_icon" />
+                    app:srcCompat="@drawable/ic_baseline_photo_camera_24"
+                    tools:srcCompat="@drawable/ic_baseline_photo_camera_24" />
 
                 <TextView
                     android:id="@+id/textView9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="40dp"
-                    android:layout_marginLeft="40dp"
                     android:text="logo click aqui"
+                    android:textColor="@color/color4"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/img_rr_logo"
+                    app:layout_constraintStart_toStartOf="@+id/img_rr_logo"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.827" />
+                    app:layout_constraintVertical_bias="0.894" />
 
                 <TextView
                     android:id="@+id/textView10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="56dp"
-                    android:layout_marginRight="56dp"
-                    android:text="foto del lugar\nclick aqui"
+                    android:text="foto del lugar\click aqui"
+                    android:textColor="@color/color4"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/img_rr_fotolugar"
+                    app:layout_constraintHorizontal_bias="0.555"
+                    app:layout_constraintStart_toStartOf="@+id/img_rr_fotolugar"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.88" />
+                    app:layout_constraintVertical_bias="0.894" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <Button
                 android:id="@+id/btn_rr_crear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/rectanguloboton"
                 android:text="Crear" />
         </LinearLayout>
     </ScrollView>
